Resize card__text & fix spacing inside card

--- a/src/styles/btn.css
+++ b/src/styles/btn.css
@@ -2,7 +2,7 @@
     color: #32416A;
     border: 3px solid #32416A;
     display: inline-block;
-    padding: .64rem 1rem;
+    padding: .422rem;
 }
 
 .btn:hover {
